RESOLVED FIXED226719
[WTF][GStreamer] Fix clang TSA warnings in WTF::DataMutex
https://bugs.webkit.org/show_bug.cgi?id=226719
Summary [WTF][GStreamer] Fix clang TSA warnings in WTF::DataMutex
Alicia Boya García
Reported 2021-06-07 02:14:15 PDT
Fix the remaning clang thread safety warnings in WTF::DataMutex. The goal of this patch is to reduce the number of warnings in the GStreamer codebase. Whether DataMutex should be deprecated in favor of Locker with the clang TSA annotations is outside of the scope of this patch.
Attachments
Patch (2.95 KB, patch)
2021-06-07 02:15 PDT, Alicia Boya García
no flags
Alicia Boya García
Comment 1 2021-06-07 02:15:10 PDT
EWS
Comment 2 2021-06-07 04:46:06 PDT
Committed r278558 (238556@main): <https://commits.webkit.org/238556@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430731 [details].
Note You need to log in before you can comment on or make changes to this bug.